debug.yaml
apiVersion: v1
kind: Pod
metadata:
 name: debug
spec:
  containers:
  - name: debug
    image: alpine
    command:
    - "sleep"
    - "1000"
