deployment-www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwww
spec:
  selector:
    matchLabels:
      app: wwww
  replicas: 2
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
      - name: www
        image: nginx:1.12.2
