nginx-pod-dev.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
 namespace: development
spec:
  containers:
  - name: www
    image: nginx:1.12.2
