nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
spec:
  containers:
  - name: www
    image: nginx:1.12.2
