nginx-pod_old.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    type: web 
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
