pod-config-volume.yaml
apiVersion: v1
kind: Pod
metadata:
 name: www
spec:
  containers:
  - name: proxy
    image: nginx:1.12.2
    ports:
    - containerPort: 8000
    volumeMounts:
    - name: config
      mountPath: "/etc/nginx/"
  - name: api
    image: lucj/city:1.0
    ports:
    - containerPort: 80
  volumes:
  - name: config
    configMap:
      name: nginx-config
