pod-secret-tls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: proxy
spec:
  containers:
  - name: proxy
    image: nginx:1.12.2
    volumeMounts:
    - name: tls
      mountPath: "/etc/ssl/certs/"
  volumes:
  - name: tls
    secret:
      secretName: domain-pki
