pod-secret-volume-1.yaml
apiVersion: v1
kind: Pod
metadata:
   name: alpine
spec:
   containers:
   - name: alpine
     image: alpine
     command:
     - "sleep"
     - "10000"
     volumeMounts:
     - name: creds
       mountPath: "/etc/creds"
       readOnly:true
volumes:
- name: creds
  secret:
     secretName: mongo-creds
