pod-secret-volume-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
spec:
  containers:
  - name: alpine
    image: alpine
    command:
    - "sleep"
    - "10000"
    volumeMounts:
    - name: creds
      mountPath: "/etc/creds"
      readOnly: true
  volumes:
  - name: creds
    secret:
      secretName: service-creds
      items:
      - key: username.txt
        path: service/auth
      - key: password.txt
        path: service/pass
