pod_vote.yaml
apiVersion: v1
kind: Pod
metadata:
 name: vote
 labels:
   app: vote
spec:
  containers:
  - name: vote
    image: instavote/vote
    ports:
    - containerPort: 80
