www.yaml
apiVersion: v1
kind: Pod
metadata:
 name: www
spec:
  containers:
  - name: nginx
    image: nginx:1.12.2
