ingress-domanie-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-domain
spec:
  rules:
  - host: www.example.com
      paths:
        backend:
          service:
            name: www
          port:
            number: 80
